--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>This is a Practice</title>
 </head>
 <body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pagetwo.html">Page Two</a></li>
+    </ul>
     <h1>Testing out Publishing a Webpage</h1>
     <p>Trying out publishing a webpage.</p>
 </body>
