--- a/pagetwo.html
+++ b/pagetwo.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Second Page</title>
 </head>
-<body>  
+<body>
+    <ul>
+       <li><a href="index.html">Home</a></li>
+       <li><a href="pagetwo.html">Page Two</a></li>
+   </ul>
   <h2>Page Two of the Website</h2>  
 </body>
 </html>
